--- a/src/template/modal-cocktails.hbs
+++ b/src/template/modal-cocktails.hbs
@@ -10,7 +10,7 @@
   <h3 class='modal-first__title-second ingridients'>INGREDIENTS</h3>
   <span class='modal-first__span'>Per cocktail</span>
   <ul class='modal-first__list list'>
-    {{#each strIngredient}}<li class='modal-first__item'>{{this}}</li>
+    {{#each strDoseIng}}<li class='modal-first__item'>{{this}}</li>
     {{/each}}
   </ul>
 </div>
