--- a/src/sass/layouts/_dark-theme.scss
+++ b/src/sass/layouts/_dark-theme.scss
@@ -8,6 +8,7 @@ $colorFontQuinary: #bdbdbd;
 
 body {
   margin-right: calc(-1 * (100vw - 100%));
+  overflow-x: hidden;
 
   .hero {
     padding-top: 90px;
