--- a/src/template/modal-cocktails.hbs
+++ b/src/template/modal-cocktails.hbs
@@ -15,7 +15,7 @@
   </ul>
 </div>
 <button type='button' class='modal-first__button'>Add to favorite</button>
-<svg class='modal-first__icon-close' data-modal-close>
+<svg class='modal-first__icon-close exp' data-modal-close>
   <use
     href='http://localhost:1234/all_svg.svg#icon-clarity_close-line-black'
   ></use>
