--- a/src/partials/catalogue.html
+++ b/src/partials/catalogue.html
@@ -4,7 +4,7 @@
 
     <ul class="catalogue__list list" data-modal-open></ul>
 
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden exp" data-modal>
       <div class="modal-first"></div>
     </div>
 
