--- a/src/sass/layouts/_catalogue.scss
+++ b/src/sass/layouts/_catalogue.scss
@@ -1,12 +1,12 @@
 .modal-first {
   position: absolute;
-  overflow: hidden;
+  // overflow: hidden;
 
   z-index: 2;
 
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
   min-height: auto;
 
@@ -320,16 +320,6 @@
   }
 }
 
-.overflow {
-  overflow: hidden;
-}
-
-.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
-
 .backdrop {
   z-index: 1;
 
@@ -354,4 +344,8 @@
 
 .backdrop.is-hidden .modal-first {
   transform: translate(-50%, -50%) scale(0.2);
+}
+
+.overflow {
+  overflow: hidden;
 }
