--- a/src/partials/favorite-ingridients.html
+++ b/src/partials/favorite-ingridients.html
@@ -2,7 +2,7 @@
   <h2 class="catalogue__title">Favorite ingredients</h2>
 
   <ul class="catalogue__list list">
-    <li class="catalogue__item">
+    <!-- <li class="catalogue__item">
       <div class="catalogue__ingredient">
         <ul class="list">
           <li class="catalogue__textfaving">Campari</li>
@@ -22,6 +22,6 @@
           </button>
         </div>
       </div>
-    </li>
+    </li> -->
   </ul>
 </section>
