--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -53,7 +53,7 @@
         <ul class="header__nav-list header__nav-list--menu">
           <li class="header__nav-item header__nav-item--menu">
             <a
-              onclick="return false"
+              onclick="location.reload(); return false;"
               href="./index.html"
               class="header__nav-text"
               >Home</a
