--- a/src/sass/layouts/_buttons.scss
+++ b/src/sass/layouts/_buttons.scss
@@ -1,5 +1,7 @@
 .btn__orange {
-  padding: 15px 18px;
+  justify-content: center;
+  width: 50%;
+  padding: 15px 16px;
   background-color: #fe7031;
   border: 1px solid #fe7031;
   border-radius: 4px;
@@ -16,6 +18,8 @@
 }
 
 .btn__transparent {
+  justify-content: center;
+  width: 50%;
   display: flex;
   align-items: center;
   gap: 9px;
