--- a/src/template/modal-cocktails.hbs
+++ b/src/template/modal-cocktails.hbs
@@ -16,5 +16,7 @@
 </div>
 <button type='button' class='modal-first__button'>Add to favorite</button>
 <svg class='modal-first__icon-close exp' data-modal-close>
-  <use href='http://localhost:1234/all_svg.svg#icon-heart-tomato'></use>
+  <use
+    href='https://vokoloven.github.io/hardcore-bar/all_svg.svg#icon-clarity_close-line-black'
+  ></use>
 </svg>
