--- a/src/template/cocktail-card.hbs
+++ b/src/template/cocktail-card.hbs
@@ -12,11 +12,26 @@
       <button class='btn__transparent' type='button'>
         Add to
 
-        <img
+        {{! <img
           class='svg__btn'
           src='http://localhost:1234/heart-tomato.svg'
           alt='not-found-cocktails-img'
+        /> }}
+
+        <img
+          class='svg__btn'
+          src='https://vokoloven.github.io/hardcore-bar/heart-tomato.svg'
+          alt='not-found-cocktails-img'
         />
+
+        {{! <svg class='svg__btn' width='21px' height='19px' data-modal-close>
+          <use href='http://localhost:1234/all_svg.svg#icon-heart-tomato'></use>
+        </svg>
+        <svg class='svg__btn' width='21px' height='19px' data-modal-close>
+          <use
+            href='https://vokoloven.github.io/hardcore-bar/all_svg.svg#icon-heart-tomato'
+          ></use>
+        </svg> }}
       </button>
     </div>
   </div>
