--- a/src/template/not-found-cocktails.hbs
+++ b/src/template/not-found-cocktails.hbs
@@ -2,9 +2,22 @@
   <h3 class='not-found-cocktails__title'>
     Sorry, we didn't find any cocktail for you
   </h3>
-  <img
+  {{! <img
     class='not-found-cocktails__img'
     src='http://localhost:1234/not-found-cocktails-svg.svg'
     alt='not-found-cocktails-img'
+  /> }}
+  <img
+    class='not-found-cocktails__img'
+    src='https://vokoloven.github.io/hardcore-bar/not-found-cocktails-svg.svg'
+    alt='not-found-cocktails-img'
   />
+  {{! <svg class='not-found-cocktails__img' data-modal-close>
+    <use href='http://localhost:1234/not-found-cocktails-svg.svg'></use>
+  </svg>
+  <svg class='not-found-cocktails__img' data-modal-close>
+    <use
+      href='https://vokoloven.github.io/hardcore-bar/not-found-cocktails-svg.svg'
+    ></use>
+  </svg> }}
 </div>
