--- a/src/template/modal-cocktails.hbs
+++ b/src/template/modal-cocktails.hbs
@@ -20,3 +20,8 @@
     href='https://vokoloven.github.io/hardcore-bar/all_svg.svg#icon-clarity_close-line-black'
   ></use>
 </svg>
+<svg class='modal-first__icon-close exp' data-modal-close>
+  <use
+    href='http://localhost:1234/all_svg.svg#icon-clarity_close-line-black'
+  ></use>
+</svg>
