--- a/src/sass/layouts/_modal-ingredients.scss
+++ b/src/sass/layouts/_modal-ingredients.scss
@@ -1,13 +1,14 @@
 .backdrop-campari {
   position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1),
-      visibility 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 1000ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop-campari.is-hidden-campari {
@@ -30,48 +31,64 @@
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
-  width: 320px;
-  height: 673px;
+
   background-color: $colorBackgroundDay;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 320px;
+  max-width: 480px;
+  padding: 40px 20px;
+
   @include tablet {
-    width: 715px;
-    height: 557px;
+    min-width: 715px;
+    padding-bottom: 28px;
+  }
+}
+
+.campari-line {
+  @include tablet {
+    border-bottom: 1px solid $colorFontPrimary;
+    margin-bottom: 28px;
   }
 }
 
 .campari-titles__border {
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 10px;
+  margin-bottom: 20px;
 
   @include tablet {
     border-bottom: 1px solid $colorFontPrimary;
     padding-left: 28px;
-      padding-right: 28px;
-      padding-bottom: 40px;
+    padding-right: 28px;
+    padding-bottom: 40px;
   }
 }
 
 .campari-title {
   @include fonts($ff: Roboto, $ffs: normal, $fw: 900, $fs: 32px, $lh: 38px);
   color: $colorFontSecondary;
-  margin-bottom: 28px;
+  margin-bottom: 20px;
+
+  @include tablet {
+    margin-bottom: 28px;
+  }
 
   &__min {
     @include fonts($ff: Poppins, $ffs: normal, $fw: 600, $fs: 16px, $lh: 24px);
     text-transform: uppercase;
+
+    @include tablet {
+      margin-bottom: 40px;
+    }
   }
 }
 
 .campari-text__container {
-  height: 452px;
+  margin-bottom: 32px;
+
   overflow: auto;
-  padding-top: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
 
   @include tablet {
     height: 300px;
@@ -84,8 +101,17 @@
 
 .campari-text {
   color: $colorFontTertiary;
-  margin-bottom: 28px;
+
   @include fonts($ff: Poppins, $ffs: normal, $fw: 400, $fs: 16px, $lh: 28px);
+}
+
+.campari-list {
+  margin-top: 28px;
+  margin-bottom: 32px;
+
+  @include tablet {
+    margin-bottom: 40px;
+  }
 }
 
 .campari-list__item {
@@ -98,24 +124,31 @@
 }
 
 .campari-btn__close {
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 8px;
-  margin-left: auto;
-  margin-top: 8px;
-  width: 30px;
-  height: 30px;
-  border: none;
+  position: absolute;
+  top: 16px;
+  right: 16px;
+
+  width: 32px;
+  height: 32px;
   padding: 0;
-  // display: flex; 
-  // justify-content: center; 
-  // align-items: center; 
-  background-color: $colorBackgroundDay;
+
+  cursor: pointer;
+
+  border-radius: 50%;
+  border: none;
+  background-color: transparent;
+
+  transition: 0.5s;
+
+  @include tablet {
+    top: 12px;
+    right: 12px;
+  }
 }
 
 .campari-icon__close {
   display: block;
-  // fill: $colorFontSecondary; 
+
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover {
@@ -123,23 +156,18 @@
   }
 }
 .campari-btn__close:hover {
-  border: 1px solid $colorFontPrimary;
+  // border: 1px solid $colorFontPrimary;
 }
 
 .campari-btn__add {
   display: flex;
-    justify-content: start;
-    margin-top: 12px;
-    margin-left: 16px;
-    margin-right: auto;
-    margin-bottom: 40px;
+  justify-content: start;
+
+  margin-right: auto;
+
   @include tablet {
-    width: max-content;
-    display: flex;
-      justify-content: end;
-      margin-left: auto;
-      margin-right: 28px;
-      margin-bottom: 28px;
+    margin-right: 0;
+    margin-left: auto;
   }
 
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
