--- a/src/template/modal-ingred.hbs
+++ b/src/template/modal-ingred.hbs
@@ -7,27 +7,31 @@
   ></use>
 </svg>
 
-<h2 class='campari-title'>{{strIngredient}}</h2>
+<div class='top-container'>
+  <h2 class='campari-title'>{{strIngredient}}</h2>
 
-<h3 class='campari-title__min'>{{strType}}</h3>
+  <h3 class='campari-title__min'>{{strType}}</h3>
+</div>
 
 <div class='campari-line'></div>
 
-<p class='campari-text'>
-  {{strDescription}}
-</p>
+<div class='bot-container'>
+  <p class='campari-text'>
+    {{strDescription}}
+  </p>
 
-<ul class='list campari-list'>
-  <li class='campari-list__item'>
-    <span class='campari-list__itemb'>✶ </span>Type:
-    {{strType}}
-  </li>
-  <li class='campari-list__item'>
-    <span class='campari-list__itemb'>✶ </span>Alcohol by volume:
-    {{strABV}}%
-  </li>
-</ul>
+  <ul class='list campari-list'>
+    <li class='campari-list__item'>
+      <span class='campari-list__itemb'>✶ </span>Type:
+      {{strType}}
+    </li>
+    <li class='campari-list__item'>
+      <span class='campari-list__itemb'>✶ </span>Alcohol by volume:
+      {{strABV}}%
+    </li>
+  </ul>
 
-<button type='button' class='btn__orange campari-btn__add'>
-  Add to favorite
-</button>
+  <button type='button' class='btn__orange campari-btn__add'>
+    Add to favorite
+  </button>
+</div>
